--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
     <nav>
         <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">News</a>
+        <a href="#">Informations</a>
+        <a href="#">Talk to us</a>
     </nav>   
     <main>
        <article>        
